Remove cache argument from markdown setup

--- a/1.DataCleaning_PreliminaryAnalysis_NH.Rmd
+++ b/1.DataCleaning_PreliminaryAnalysis_NH.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 ```{r setup, include=FALSE}
 
-knitr::opts_chunk$set(echo = TRUE, cache = T)
+knitr::opts_chunk$set(echo = TRUE)
 
 library(dplyr)
 library(data.table)
